# BareTcl_BiTun_Esp32_Ports

./: .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  console.html  diff.patch  esp32_lib.tcl  flash.bat  sdkconfig
components/bitun_wrapper/: CMakeLists.txt  bitun_osal_esp32.c
docs/: README_EN.md  README_JA.md
main/: CMakeLists.txt  console_html.c  esp32_lib.c  esp32_lib.tcl  main.c
tools/: tcl2c_esp32.py
tools/flash/: flash.bat
